--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>My First Portfolio</title>
+    <title>Emilys Portfolio</title>
     <meta charset="UTF-8">
     <meta name="description" content="Portfolio">
     <meta name="keywords" content="Design, UX, UI, Portfolio">
@@ -16,10 +16,37 @@
 </head>
 
 <body>
-    <h1>This is my portfolio!</h1>
 
-    <!-- JS -->
-    <script src="js/main.js"></script>
-</body>  
+<ul id="Nav">
+        <li>Portfolio</li>
+        <li>Bio</li>
+        <li>CV</li>
+        <li>Contact</li>
+    </ul>
 
-</html>
+
+    <!-- Hero Section -->
+    <div class="section">
+        <h1 class="left-align">Emily Andrews</h1>
+        <h1 class="left-align">UX/UI Designer</h1>sc
+    </div>
+
+    <!-- Portfolio Section -->
+    <div id="portfolio" class="section">
+        <h2 class="center-align">Portfolio</h2>
+    </div>
+
+    <!-- Bio Section -->
+    <div id="bio" class="section">
+        <h2 class="center-align">Bio</h2>
+    </div>
+
+    <!-- CV Section -->
+    <div id="cv" class="section">
+        <h2 class="center-align">CV</h2>
+    </div>
+
+    <!-- Contact Section -->
+    <div id="contact" class="section">
+        <h2 class="center-align">Contact</h2>
+    </div>
